# pythia

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  benchmark_research.py  docker-compose.yml  install.sh  pyproject.toml  pythia.yaml  setup_schema.sql
.autoresearch/: session.jsonl
.omc/: prd.json  progress.txt  project-memory.json
.omc/sessions/: b38e4469-9e5c-4f84-8d24-11b45a1c050c.json
.omc/state/: mission-state.json
.omx/: metrics.json
.omx/context/: full-readme-user-walkthrough-20260403T023027Z.md
.omx/logs/: tmux-hook-2026-04-03.jsonl  turns-2026-04-03.jsonl
.omx/plans/: autopilot-impl.md  autopilot-spec.md  consensus-contract-realignment.md
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
docs/slides/: presentation.html
migrations/: 002_iterative_investigations.sql
oci-genai/: README.md  proxy.py
scripts/: capture_screenshots.py  grok4_smoke.py
searxng/: settings.yml
skills/: compare.yaml
src/pythia/: __init__.py  __main__.py  autoresearch.py  cli.py  cli_runner.py  config.py  embeddings.py  provenance.py  scraper.py  services.py  skills.py  verification.py  workspace.py
src/pythia/server/: app.py  claims.py  grounding.py  llm_client.py  oci_genai.py  ollama.py  oracle_cache.py  research.py  search.py  searxng.py
src/pythia/tui/: app.py  commands.py
src/pythia/tui/screens/: dashboard.py  history.py  research.py  search.py
src/pythia/tui/themes/: catppuccin-mocha.tcss  dark.tcss  light.tcss  nord.tcss
src/pythia/tui/widgets/: action_bar.py  activity_indicator.py  cache_badge.py  finding_detail.py  grounding_badge.py  history_list.py  logo.py  research_progress.py  research_tree.py  result_card.py  search_input.py  service_status.py  session_divider.py  settings_panel.py  skills_panel.py  source_list.py  sparkline_panel.py  stats_panel.py  status_bar.py  suggestions.py  tab_bar.py  thinking_block.py
tests/: test_app.py  test_autoresearch.py  test_battle_hardening.py  test_claims.py  test_cli.py  test_cli_runner.py  test_config.py  test_embeddings.py  test_feynman_features.py  test_grounding.py  test_http_clients.py  test_innovations.py  test_integration.py  test_llm_factory.py  test_oci_genai.py  test_ollama.py  test_oracle_cache.py  test_research.py  test_scraper.py  test_search.py  test_searxng.py  test_services.py  test_suggestions.py  test_tui_history_list.py  test_tui_integration.py  test_tui_research_progress.py  test_tui_research_tree.py  test_tui_session_divider.py  test_tui_tab_bar.py  test_tui_themes.py  test_verification.py
